2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-08-02  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* typedCmdline.test: Updated to changes in Tcl 8.5 head.

2007-03-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* cmdline.man: Fixed all warnings due to use of now deprecated
	  commands. Added a section about how to give feedback.

2007-01-11  Andreas Kupries  <andreask@activestate.com>

	* cmdline.man: Extended the list of keywords in the documentation.
	  [SF Tcllib Bug 1615252].

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2006-09-27  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* cmdline.tcl: Bumped to version 1.3, due internal rewrite
	* cmdline.man: (Folding of typedCmdline into main file).
	* pkgIndex.tcl:

2006-09-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* cmdline.test: Added 'exit' to the scripts executed in
	  sub-shells, to make them usable with 'wish'-type shells as well.

2006-04-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* cmdline.tcl: Added the contents of typedCmdline.tcl to this file
	  (appended). It was loaded anyway, always, its procedures used
	  the same namespace, a separation does not make much sense. It
	  also makes deployment of the package as Tcl Module trivial,
	  i.e. this squashes the need to use some virtual filesystem to
	  keep everything together.

	* typedCmdline.tcl: File removed. Contents appended to
	  cmdline.tcl, s.a.

2006-01-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* cmdline.test:      Fixed use and cleanup of temp. files.
	* typedCmdline.test: Fixed use of duplicate test names.

2006-01-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* cmdline.test: More boilerplate simplified via use of test support.